--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,4 @@
 <h1><%= @book.title %> - Quantity: <%= @book.quantity %></h1>
 <h3>Price: $<%= @book.price %></h3>
+
+<%= link_to "Back to All Books", books_path %>
