CRUD complete, links to new/show in index, links to edit/delete/index in show

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,5 @@
+<h1><%= link_to "Create a New Book", new_book_path %></h2>
+
 <% @books.each do |book| %>
   <li><%= link_to book.title, book_path(book) %> - <%= book.quantity %></li>
 <% end %>
