--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,3 +2,5 @@
 <h3>Price: $<%= @book.price %></h3>
 
 <%= link_to "Back to All Books", books_path %>
+<%= link_to "Edit", edit_book_path %>
+<%= link_to "Delete", book_path(@book), method: :delete %>
